Refactor AplikasiServiceImpl to integrate with external catalog service
- Replaced direct database interactions with calls to ApplicationCatalogClient for creating, updating, retrieving, and deleting applications.
- Introduced CatalogAplikasiMapper for mapping between domain requests/responses and catalog requests/responses.
- Removed unused repository dependencies and methods related to MstAplikasi.
- Updated application.yaml to include external catalog configuration.